--- a/steps/conditions_step.yml
+++ b/steps/conditions_step.yml
@@ -18,7 +18,7 @@ trigger:
           params:
             text: ${userMessageText}
             strings:
-              - "good"
+              - "Good"
       then:
         do:
           - actionId: bot_message
