--- a/quest.yml
+++ b/quest.yml
@@ -1,7 +1,7 @@
 id: quest_anythink-market-1ars4x8j
 title: sdsds
 subtitle: Subtitle content
-description: "dsfsdfd"
+description: "dsfsdfd df nsdfd dsdffsd"
 summary: "your summary"
 level: beginner
 steps:
